--- a/static/404.html
+++ b/static/404.html
@@ -1,14 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Redirecting...</title>
-    <script>
-      sessionStorage.redirect = location.href;
-    </script>
-    <meta http-equiv="refresh" content="0;URL='/'">
-  </head>
-  <body>
-    <p>If you are not redirected automatically, <a href="/">click here</a>.</p>
-  </body>
-</html>
+<!doctype html><meta charset="utf-8">
+<meta http-equiv="refresh" content="0;url=./">
+<title>Redirecting…</title>
